--- a/front-mobile/FrontMobile/package.json
+++ b/front-mobile/FrontMobile/package.json
@@ -7,16 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "fbemitter": "^2.1.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.54.2",
-    "react-navigation": "^1.5.2"
+    "fbemitter": ">=2.1.1",
+    "react": ">=16.3.0-alpha.1",
+    "react-native": ">=0.54.2",
+    "react-navigation": ">=1.5.2"
   },
   "devDependencies": {
-    "babel-jest": "22.4.1",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.2",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "babel-jest": ">=22.4.1",
+    "babel-preset-react-native": ">=4.0.0",
+    "jest": ">=22.4.2",
+    "react-test-renderer": ">=16.3.0-alpha.1"
   },
   "jest": {
     "preset": "react-native"
